<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="key_launch_app_info"
        android:title="@string/pref_launch_app_info_title"
        android:summary="@string/pref_launch_app_info_summary"
        />
    <ListPreference
        android:key="key_holiday_calendar"
        android:title="@string/pref_holiday_calendar_title"
        android:summary="@string/pref_holiday_calendar_summary"
        />
    <PreferenceScreen android:title="@string/pref_box_bgcolor_headertitle">
        <ListPreference
            android:key="key_box_bgcolor_sunday"
            android:title="@string/pref_box_bgcolor_sunday_title"
            android:entries="@array/box_bgcolor_entries"
            android:entryValues="@array/box_bgcolor_entryvalues"
            android:defaultValue="2"
            />
        <ListPreference
            android:key="key_box_bgcolor_monday"
            android:title="@string/pref_box_bgcolor_monday_title"
            android:entries="@array/box_bgcolor_entries"
            android:entryValues="@array/box_bgcolor_entryvalues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="key_box_bgcolor_tuesday"
            android:title="@string/pref_box_bgcolor_tuesday_title"
            android:entries="@array/box_bgcolor_entries"
            android:entryValues="@array/box_bgcolor_entryvalues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="key_box_bgcolor_wednesday"
            android:title="@string/pref_box_bgcolor_wednesday_title"
            android:entries="@array/box_bgcolor_entries"
            android:entryValues="@array/box_bgcolor_entryvalues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="key_box_bgcolor_thursday"
            android:title="@string/pref_box_bgcolor_thursday_title"
            android:entries="@array/box_bgcolor_entries"
            android:entryValues="@array/box_bgcolor_entryvalues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="key_box_bgcolor_friday"
            android:title="@string/pref_box_bgcolor_friday_title"
            android:entries="@array/box_bgcolor_entries"
            android:entryValues="@array/box_bgcolor_entryvalues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="key_box_bgcolor_saturday"
            android:title="@string/pref_box_bgcolor_saturday_title"
            android:entries="@array/box_bgcolor_entries"
            android:entryValues="@array/box_bgcolor_entryvalues"
            android:defaultValue="1"
            />
    </PreferenceScreen>
<!-- 
    <PreferenceScreen android:title="@string/pref_menu_common_headertitle">
        <ListPreference
            android:key="key_launch_app_info"
            android:title="@string/pref_launch_app_info_title"
            android:summary="@string/pref_launch_app_info_summary"
            />
        <ListPreference
            android:key="key_holiday_calendar"
            android:title="@string/pref_holiday_calendar_title"
            android:summary="@string/pref_holiday_calendar_summary"
            />
        <PreferenceScreen android:title="@string/pref_box_bgcolor_headertitle">
            <ListPreference
                android:key="key_box_bgcolor_sunday"
                android:title="@string/pref_box_bgcolor_sunday_title"
                android:entries="@array/box_bgcolor_entries"
                android:entryValues="@array/box_bgcolor_entryvalues"
                />
            <ListPreference
                android:key="key_box_bgcolor_monday"
                android:title="@string/pref_box_bgcolor_monday_title"
                android:entries="@array/box_bgcolor_entries"
                android:entryValues="@array/box_bgcolor_entryvalues"
                />
            <ListPreference
                android:key="key_box_bgcolor_tuesday"
                android:title="@string/pref_box_bgcolor_tuesday_title"
                android:entries="@array/box_bgcolor_entries"
                android:entryValues="@array/box_bgcolor_entryvalues"
                />
            <ListPreference
                android:key="key_box_bgcolor_wednesday"
                android:title="@string/pref_box_bgcolor_wednesday_title"
                android:entries="@array/box_bgcolor_entries"
                android:entryValues="@array/box_bgcolor_entryvalues"
                />
            <ListPreference
                android:key="key_box_bgcolor_thursday"
                android:title="@string/pref_box_bgcolor_thursday_title"
                android:entries="@array/box_bgcolor_entries"
                android:entryValues="@array/box_bgcolor_entryvalues"
                />
            <ListPreference
                android:key="key_box_bgcolor_friday"
                android:title="@string/pref_box_bgcolor_friday_title"
                android:entries="@array/box_bgcolor_entries"
                android:entryValues="@array/box_bgcolor_entryvalues"
                />
            <ListPreference
                android:key="key_box_bgcolor_saturday"
                android:title="@string/pref_box_bgcolor_saturday_title"
                android:entries="@array/box_bgcolor_entries"
                android:entryValues="@array/box_bgcolor_entryvalues"
                />
        </PreferenceScreen>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/pref_menu_month_headertitle">
        <ListPreference
            android:key="key_first_day_Of_week"
            android:title="@string/pref_first_day_Of_week_title"
            android:entries="@array/first_day_Of_week_entries"
            android:entryValues="@array/first_day_Of_week_entryvalues"
            android:defaultValue="1"
            />
    </PreferenceScreen>
 -->
</PreferenceScreen>
